# webserver

./: .gitignore  CMakeLists.txt  compile
.cache/clangd/index/: main.c.7D1F443CB0650BD0.idx
http/: CMakeLists.txt
http/include/http/: common.h  config.h  header.h  http.h  message.h  parser.h  request.h  response.h  version.h
http/src/: header.c  message.c  parser.c  parser.h  request.c  response.c  version.c
server/: CMakeLists.txt
server/src/: main.c  webserver.c  webserver.h
